--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,6 +14,8 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    color: white;
+    text-decoration: none;
 
     &:hover {
       background-color: $light-blue;
