--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -1,7 +1,8 @@
 @import "../../App.scss";
 
 .side-bar {
+  display: flex;
+  flex-direction: column;
   width: 300px;
-  height: 100%;
   border-right: 1px solid $light-blue;
 }
