set canvas size on image load

--- a/src/components/ImageCropper/ImageCropper.scss
+++ b/src/components/ImageCropper/ImageCropper.scss
@@ -23,6 +23,12 @@
       max-width: 90%;
       border: 1px solid white;
     }
+
+    #canvas-element {
+      position: absolute;
+      max-height: 90%;
+      max-width: 90%;
+    }
   }
 }
 
