--- a/src/components/ImageCropper/ImageCropper.scss
+++ b/src/components/ImageCropper/ImageCropper.scss
@@ -16,6 +16,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    background-color: $dark-gray;
 
     .original-image {
       position: absolute;
@@ -45,7 +46,14 @@
   .description {
     flex: 1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: $dark-gray;
+
+    .image-icon {
+      width: 48px;
+      margin-bottom: 20px;
+    }
   }
 }
