cursor crosshair on canvas

--- a/src/components/ImageCropper/ImageCropper.scss
+++ b/src/components/ImageCropper/ImageCropper.scss
@@ -29,6 +29,10 @@
       max-height: 90%;
       max-width: 90%;
       border: 1px solid white;
+
+      &:hover {
+        cursor: crosshair;
+      }
     }
   }
 }
