--- a/src/components/Setting/Setting.scss
+++ b/src/components/Setting/Setting.scss
@@ -24,6 +24,10 @@
         background-color: $light-blue;
         color: $dark-blue;
       }
+
+      &:focus {
+        outline: none;
+      }
     }
 
     .input-button-group {
@@ -57,6 +61,10 @@
           background-color: $dark-blue;
           color: $light-blue;
         }
+
+        &:focus {
+          outline: none;
+        }
       }
     }
   }
@@ -79,6 +87,10 @@
       &:hover {
         background-color: $light-blue;
         color: $dark-blue;
+      }
+
+      &:focus {
+        outline: none;
       }
     }
   }
