--- a/src/components/Setting/Setting.scss
+++ b/src/components/Setting/Setting.scss
@@ -19,14 +19,17 @@
       background-color: $dark-blue;
       color: $light-blue;
       cursor: pointer;
-
-      &:hover {
-        background-color: $light-blue;
-        color: $dark-blue;
-      }
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       &:focus {
         outline: none;
+      }
+
+      .check-icon {
+        margin-left: 10px;
+        width: 16px;
       }
     }
 
@@ -49,8 +52,8 @@
 
       button {
         width: 190px;
-        background-color: $light-blue;
-        color: $dark-blue;
+        background-color: transparent;
+        color: $light-blue;
         border: 1px solid $light-blue;
         border-radius: 0 4px 4px 0;
         border-left: none;
@@ -100,5 +103,10 @@
       color: $light-blue;
       margin: 15px 0;
     }
+  }
+
+  .disabled {
+    opacity: 0.5;
+    cursor: not-allowed !important;
   }
 }
